# rstudio

./: .air.toml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  1q  ACE_DIAGNOSTICS.txt  CMakeCompiler.txt  CMakeGlobals.txt  CMakeInstallDocs.txt  CMakeLists.txt  CMakeOverlay.txt  CMakePlatform.txt  CMakePresets.json  CMakeRelease.txt  CONTRIBUTING.md  CONTRIBUTORS  COPYING  Dockerfile.dispatcher  INSTALL  Jenkinsfile  Jenkinsfile.dispatchMacOs  Jenkinsfile.electron  Jenkinsfile.linux  Jenkinsfile.linux.build-retries  Jenkinsfile.macos  Jenkinsfile.macos-test  Jenkinsfile.macos.electron  Jenkinsfile.pull-request  Jenkinsfile.test  Jenkinsfile.version  Jenkinsfile.windows  NEWS-1.2-patch.md  NEWS-1.3-patch.md  NEWS-1.3.md  NEWS-1.4-juliet-rose.md  NEWS-1.4.md  NEWS-1.5-ghost-orchid  (+41 more)
package/: .gitignore  CMakeLists.txt
package/linux/: .dockerignore  .gitignore  CMakeLists.txt  com.rstudio.RStudio.json  fix-debian-permissions  install-dependencies  make-desktop-package  make-electron-package  make-package  make-server-package
package/linux/debian-control/: postinst-desktop.in  postinst-electron.in  postinst.in  postrm-desktop.in  postrm-electron.in  postrm.in
package/linux/rpm-script/: postinst-desktop.sh.in  postinst-electron.sh.in  postinst.sh.in  postrm-desktop.sh.in  postrm-electron.sh.in  postrm.sh.in
package/linux/scripts/: prepare-symbol-backfill  upload-debug-symbols  vars.sh  verify-debug-symbols
package/linux/selinux/: .gitignore  CMakeLists.txt  build_selinux_policy.sh  postinst.in  postrm.in  rstudio-server-selinux.spec  rstudio.fc.in  rstudio.if  rstudio.te  rstudio_selinux.8  rstudio_server_selinux.8
package/osx/: .gitignore  CMakeLists.txt  electron-build.sh  entitlements-electron.plist  entitlements.plist  fix-arm64-library-paths.R  fix-library-paths-electron.sh  fix-library-paths.sh  install-rsession-arm64.R  make-package
package/osx/cmake/: codesign-package-electron.cmake  codesign-package.cmake  electron-build.cmake  fix-library-paths.cmake  install-electron.cmake  merge-electron.cmake  prepare-package.cmake  sign-package.cmake
package/osx/entitlements/: default.plist  rsession-adhoc.plist  rsession-ci.plist  rstudio-adhoc.plist  rstudio-ci.plist  rstudio.plist
package/osx/scripts/: codesign-package.sh  fix-library-paths.sh  install-electron.sh  merge-electron.mjs  package-lock.json  package.json
package/win32/: .gitignore  CMakeLists.txt  clean-build.bat  codesign.bat  make-dist-packages.bat  make-install-win32.bat  make-install-win64.bat  make-package.bat  rebuild-install-win64.bat  rebuild-package.bat
package/win32/cert/: After_10-10-10_MSCV-VSClass3.cer
package/win32/src/: ssh-console.bat
src/: .gitignore  CMakeLists.txt  build-asan  compile_commands.json
src/cpp/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  OPTIONS.md  RScriptCallbacks.hpp  generate-commands-accessor.R  generate-options.R  rdesktop-dev  rdesktop-dev.in  report-options.sh  rserver-automation.in  rserver-dev  rserver-dev.in  rserver-test.in  rstudio-dev.in  rstudio-mac.in  rstudio-tests.bat.in  rstudio-tests.in  rstudio.bat.in
src/cpp/conf/: database-dev.conf  rdesktop-dev.conf  rserver-dev.conf  rserver-test.conf  rsession-dev.conf
src/cpp/core/: Assert.cpp  Backtrace.cpp  Base64.cpp  Base64Tests.cpp  BoostErrors.cpp  BrowserUtils.cpp  CMakeLists.txt  ColorUtils.cpp  ConfigProfile.cpp  ConfigProfileTests.cpp  ConfigUtils.cpp  CrashHandler.cpp  Database.cpp  DatabaseTests.cpp  DateTime.cpp  Debug.cpp  DistributedEvents.cpp  Error.cpp  Exec.cpp  ExponentialBackoff.cpp  FileInfo.cpp  FileLock.cpp  FileLockTests.cpp  FileLogWriter.cpp  FileMonitorTests.cpp  FilePath.cpp  FilePathTests.cpp  FileSerializer.cpp  FileSerializerTests.cpp  FileUtils.cpp  GitGraph.cpp  Hash.cpp  HtmlUtils.cpp  HtmlUtilsTests.cpp  Jwt.cpp  JwtTests.cpp  Log.cpp  LogOptions.cpp  LogWriter.cpp  LoggingTests.cpp  (+31 more)
src/cpp/debuginfo/: CMakeLists.txt  debuginfo
src/cpp/desktop/: .gitignore  CMakeLists.txt  DesktopAboutDialog.cpp  DesktopAboutDialog.hpp  DesktopAboutDialog.ui  DesktopActivationOverlay.cpp  DesktopActivationOverlay.hpp  DesktopApplicationLaunch.hpp  DesktopBrowserWindow.cpp  DesktopBrowserWindow.hpp  DesktopCRANMirrorDialog.cpp  DesktopCRANMirrorDialog.hpp  DesktopCRANMirrorDialog.ui  DesktopChooseRHome.cpp  DesktopChooseRHome.hpp  DesktopChooseRHome.ui  DesktopComUtils.cpp  DesktopComUtils.hpp  DesktopCommandInvoker.cpp  DesktopCommandInvoker.hpp  DesktopDataUriNetworkReply.cpp  DesktopDataUriNetworkReply.hpp  DesktopDetectRHome.hpp  DesktopDownloadHelper.cpp  DesktopDownloadHelper.hpp  DesktopDownloadItemHelper.cpp  DesktopDownloadItemHelper.hpp  DesktopGwtCallback.cpp  (+114 more)
src/cpp/desktop-cef/: CMakeLists.txt  DesktopMain.mm  Info.plist.in
src/cpp/desktop-mac/: ActivationOverlay.h  ActivationOverlay.mm  AppDelegate.h  AppDelegate.mm  CMakeLists.txt  CommandInvoker.h  CommandInvoker.mm  DesktopMain.mm  DockTileView.h  DockTileView.mm  FileDownloader.h  FileDownloader.mm  GwtCallbacks.h  GwtCallbacks.hpp  GwtCallbacks.m  GwtCallbacks.mm  Info.plist.in  Main.m  Main.mm  MainFrameController.h  MainFrameController.mm  MainFrameMenu.h  MainFrameMenu.mm  MainFrameWebView.h  MainFrameWebView.mm  MenuCallbacks.h  MenuCallbacks.mm  Options.hpp  Options.mm  RStudio.sdef  SatelliteController.h  SatelliteController.mm  ScriptCommand.h  ScriptCommand.mm  SecondaryWindowController.h  SecondaryWindowController.mm  SessionLauncher.hpp  SessionLauncher.mm  Utils.hpp  Utils.mm  (+6 more)
src/dev/: rclient-dev.in  rserver-dev.in
src/gwt/: .classpath  .gitignore  .project  CLAUDE.md  CMakeLists.txt  RStudio.launch  ant  autoindent_test.html  autoindent_test.js  autoindent_test.txt  build.xml  debugmode  devmode.sh  envvars.bat  gwt-unit-tests.sh.in  rmode_harness.html
src/node/: .gitignore  CMakeLists.txt  CMakeNodeTools.txt
src/tools/: asan-build  clang-tsan-build  clang-ubsan-build  envvars.bat  gcc-tsan-build  gcc-ubsan-build  ubsan-build  valgrind-suppressions  xcode-ubsan-build
user/: BUILD  BUILD.bazel  Gwt-dto-serializers.gwt.xml  build.xml
(+27254 files in other folders)
